courses/430_programming-languages/assignment-5/tests/regression/error/hw4_error02.sml
val prog =
  PROGRAM
    {decls=[],func_decls=[],
     stmts=[ST_EXP
              {exp=EXP_BINARY
                     {lft=EXP_BOOL false,opr=BOP_PLUS,rht=EXP_STRING "Hi"}}]}
  : program
;
